# AI_CURSOR

./: .gitignore  Cargo.toml  greeting.py  main.rs
.cargo/: config.toml
