[package]
name = "rust_cpu_pow"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
itoa = "1.0"
crossbeam-channel = "0.5"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "rust_cpu_pow"
path = "main.rs"