[package]
name = "rust_cpu_pow"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10", features = ["asm"] }
rayon = "=1.8.1" # 使用等号精确锁定版本
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
crossbeam-channel = "0.5"
itoa = "1.0"
num_cpus = "1.16"

[[bin]]
name = "rust_cpu_pow"
path = "main.rs"
